Use lighter background-color for labels to fix color contrast

--- a/wagtailio/static/sass/abstracts/_variables.scss
+++ b/wagtailio/static/sass/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $color--black: #000;
 $color--off-black: #262626;
 $color--indigo: #2E1F5E;
 $color--teal: #007D7E;
+$color--light-teal: #effeff;
 $color--teal-100: #80D7D8;
 $color--teal-200: #00B0B1;
 $color--teal-300: #d9f3f3;
