--- a/wagtailio/static/sass/components/_milestone-item.scss
+++ b/wagtailio/static/sass/components/_milestone-item.scss
@@ -50,7 +50,7 @@
         font-weight: $weight--regular;
         color: $color--teal;
         border: 1px solid $color--teal-100;
-        background-color: $color--teal-300;
+        background-color: $color--light-teal;
         padding: 2px 8px;
         white-space: nowrap;
         border-radius: $rounded-xl;
